Re-styled hero image to display correctly on mobile and re-organised divs into sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,18 @@ body{
     display: flex;
     flex-direction: column;
     font-family: 'Merriweather', sans-serif;
+}
+
+h1, h2, h3{
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+    color: #FDF0D5;
+    
+}
     /* General project styles */
 
-}
+
 
 /* Header */
 
@@ -41,13 +50,7 @@ header a {
     color:inherit;
 }
 
-h1{
-    font-family: 'Raleway', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    color: #FDF0D5;
-    
-}
+
 
 #menu{
     font-size: 110%;
@@ -89,137 +92,83 @@ nav{
     font-size: 2rem;
 }
 
-/* Hero Image */
-
-.hero_inner{
-    font-size: 50px;
-    margin-top: 75px;
-    text-align: center;
-    letter-spacing: 2px;
-    color:#780000;
-}
-
-.hero_inner h3{
-
-    color: #FDF0D5;
-}
-
-.hero_image{
-
-    
-    background-image: url(../css/images/phil_hero.jpeg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    margin-top: 50px;
-
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top:100px;
-    height: 100vh;
-    width:100%;
-    background-position: center center;
-	background-repeat: no-repeat;
-    
-}
-
-
-
-
 /* Main Content */
 
-main{
+main {
     background-color: #FDF0D5;
-    /* Make main element take up ant surplus space to push footer down*/
+    /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
-    margin-top: 80px;
+    margin-top: 47px;
+}
+
+#intro{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    margin-top:15px;
+    font-family:'Merriweather', sans-serif;
+    margin: 10px 5px 10px 5px;
+
 }
 
 .phil-bass{
-    max-width: 500px;
+    max-width: 100%;
     max-height: 500px;
-    float:left;
     border:solid 3px #780000;
     border-radius: 10px;
-    margin-right: 150px;
+    margin: 10px 5px 10px 5px;
     
+}
+
+#middle{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    margin-top:15px;
+    font-family:'Merriweather', sans-serif;
+    margin: 10px 5px 10px 5px;
 
 }
 
-.wrapper{
-    margin: 150px auto;
-    width: 85%;
-}
-
-.text-box{
-    font-family: 'merriweather';
-}
-
-
-
-.phil-guinness{
-    max-width: 500px;
-    max-height: 400px;
-    float:right;
+.guinness{
+    max-width: 100%;
+    max-height: 500px;
     border:solid 3px #780000;
     border-radius: 10px;
-    margin-left: 150px;
-    margin-bottom: 30px;
-}
-
-.wrapper2{
-    margin: 150px auto;
-    width: 85%;
-}
-
-.boys{
+    margin: 10px 5px 10px 5px;
     
-    border:solid 3px #780000;
-    border-radius:10px;
-    width:560px;
-    height:315px;
-    margin-right:25px;
 }
 
-.wrapper3{
-    margin: 150px auto;
-    width: 85%;
-    display:flex;
-    justify-content: center;
-}
+/* Hero Image */
 
-.text-box-3{
-    font-family: 'merriweather';
-}
-
-
-.old-town{
+#hero{
+    height:600px;
+    width:100%;
+    background:url("images/phil_hero.jpeg") no-repeat center center/cover;
     
-    border:solid 3px #780000;
-    border-radius:10px;
-    width:560px;
-    height:315px;
-    margin-left:25px;
 }
 
-.wrapper4{
-    margin: 150px auto;
-    width: 85%;
-    display:flex;
+#hero-text{
+    color:#FDF0D5;
+    font-size:130%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    flex-direction: row-reverse;
+    text-align: center;
+    padding-top: 250px;
+
 }
 
-.text-box-4{
-    font-family: 'merriweather';
+.hero-text h2{
+    font-size:5em;
+    text-shadow: 3px 3px black;
 }
 
 
 /* Footer */
 
 #social-networks{
+    background-color: #FDF0D5;
     text-align: center;
     padding: 20px;
     display: flex;
@@ -266,12 +215,28 @@ main{
     margin: 0 0.5rem;
 }
 
-/* Main Content */
+    /* Main content */
 
-main{
-    /* push main content down to accomodate larger header - DELETE LATER IF NEEDED */
-    margin-top: 79px;
-}
+
+    /* Hero */
+
+    #hero-text{
+        max-width: 100%;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
+    .hero-text h2 {
+        font-size: 5.5em;
+        text-shadow: 4px 4px #3a3a3a;
+    }
+    
+    .hero-text h3 {
+        font-size: 1.5em;
+        text-shadow: 2px 2px #3a3a3a;
+
 
 }
 
@@ -281,4 +246,9 @@ main{
     #menu a:hover{
         border-bottom: 1px solid #FDF0D5;
     }
+}
+  
+    
+    
+    
 }
